[package]
name = "cfavml-utils"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Common utilities for maximizing performance during computation with `cfavml`"

[dependencies]
num_cpus = "1.16.0"
core_affinity = "0.8.1"
rayon = "1.10.0"

[features]
# Enables common env var compatibility.
#
# This enables CFAVML to use common env vars like `OMP_NUM_THREADS` or `OPENBLAS_NUM_THREADS`
# to configure the CPU limits of the system.
env-var-compat = []